fixed css z-index (Issue #401)

--- a/open-bpmn.glsp-client/open-bpmn-properties/css/bpmn-properties.css
+++ b/open-bpmn.glsp-client/open-bpmn-properties/css/bpmn-properties.css
@@ -28,7 +28,7 @@
 .bpmn-property-panel {
     position: absolute;
     bottom: 0px;
-    z-index: 20;
+    z-index: 0;
     width: 100%;
     background: var(--theia-editor-background);
     opacity: 0.98 !important;
